# librdmapp

./: .gitignore  CMakeLists.txt
tests/: CMakeLists.txt  test_rdma.cpp
